[fix] tripGuide .contentBox에 pre-wrap추가

--- a/app/(public)/plans/[id]/components/tripGuide/tripGuide.module.scss
+++ b/app/(public)/plans/[id]/components/tripGuide/tripGuide.module.scss
@@ -45,4 +45,5 @@
   border-radius: 12px;
   padding: 32px;
   color: $text-primary;
+  white-space: pre-wrap;
 }
